--- a/css/style.css
+++ b/css/style.css
@@ -719,6 +719,7 @@ footer h4 {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: flex-start;
+        margin: 0 30px 0 30px;
     }
 
     /* BARRE DE RECHERCHE */
@@ -748,7 +749,7 @@ footer h4 {
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     }
 
-    .section-form .form-submit button .texte{
+    .section-form .form-submit button .texte {
         display: none;
     }
 
